WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90127
32bit DFG incorrectly claims an fpr is fillable even if it has not been proven double
https://bugs.webkit.org/show_bug.cgi?id=90127
Summary
32bit DFG incorrectly claims an fpr is fillable even if it has not been prove...
Oliver Hunt
Reported
2012-06-27 19:29:19 PDT
32bit DFG fails to correctly fill double FPRs when not stored as doubles in the RegisterFile
Attachments
Patch
(2.14 KB, patch)
2012-06-28 13:47 PDT
,
Oliver Hunt
fpizlo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2012-06-28 13:47:57 PDT
Created
attachment 150004
[details]
Patch
Filip Pizlo
Comment 2
2012-06-28 13:52:33 PDT
Comment on
attachment 150004
[details]
Patch R=me.
Oliver Hunt
Comment 3
2012-06-28 13:54:13 PDT
Committed
r121466
: <
http://trac.webkit.org/changeset/121466
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug